--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/fafa12dbe5.js" crossorigin="anonymous"></script>
     <title>Weather-app</title>
+    <link href="src/style.css" rel="stylesheet"/>
+
 </head>
 <body>
     <form id="city-search-form">
@@ -26,31 +29,24 @@
                         <button>Local</button>
                     </div>
                 </div>
-                <!--City not found message-->
-                <div class="row">
-                    <div class="col-12 city-error">
-                        <span class="city-not-found"></span>
-                    </div>
-                <div class="row">
-                    <div class="col-12 date">
-                        <span id="current-date">Monday, 10 Jule</span>
-                    </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-12 time" id="current-time">
-                        16:16
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 city"></div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 current-weather-icon">
-                        <i class="fa-light fa-cloud"></i>
-                    </div>
+                <div class="container">
+                        <div class="row">
+                            <div class="col city-error">
+                                <span class="city-not-found"></span>
+                           
+                            <div class="col">
+                                <div class="col date">
+                                    <span id="current-date">Monday, 10 Jule</span>
+                                </div>
+  
+                            <div class="col time" id="current-time">
+                                16:16</div>
+                                      
+                            <div class="col current-weather-icon">
+                                <i class="fas fa-cloud current-weather"></i>
+                            </div>                             
+                        </div>                       
                 </div>
 
                 <div class="row">
