--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </br>
           </div>
         </div>
-        <p>Created by Kate</p>
+        <p>Created by Kate Vashchuk</p>
       </div>
     </form>
     <script src="src/script.js"></script>
