--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <button>Search</button>
               </div>
               <div class="col" type="button">
-                  <button>Local</button>
+                  <button id="local-button">Local</button>
               </div>
           </div>
 
