--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <button id="local-button">Local</button>
               </div>
           </div>
-
+          
           <div class="Weather-Info">
                   <div class="row">
                      <div class="col">
@@ -62,7 +62,6 @@
                 </span>
               </div>
             </div>
-          
             <div class="five-day-forecast">
               <div class="row forecast-icons">
                 <div class="col-2">
@@ -97,10 +96,12 @@
                   <div class="col-2">Weds</div>
                   <div class="col-2">Thurs</div>
               </div>
-            </br>
-          </div>
+            </div>
         </div>
-        <p>Created by Kate Vashchuk</p>
+        <span>
+          <p>Created by Kate </p>
+          <button src="https://github.com/fwhoami/weather-app">Github</button>
+        </span>
       </div>
     </form>
     <script src="src/script.js"></script>
