--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
               </div>
             </div>
         </div>
-        <span>
-          <p>Created by Kate </p>
-          <button src="https://github.com/fwhoami/weather-app">Github</button>
-        </span>
+        <div id="footer">
+          <span>Created by fwhoami</span>
+          <a href="https://github.com/fwhoami/weather-app">
+            <img src="gitlogo.jpg" width="20" height="20"></img>
+          </a>
+        </div>
       </div>
     </form>
     <script src="src/script.js"></script>
