--- a/index.html
+++ b/index.html
@@ -34,22 +34,27 @@
           </div>
           
           <div class="Weather-Info">
-                  <div class="row">
-                     <div class="col">
-                        <div class="col-6 date">
-                          <span id="current-date">Monday, 10 Jule</span>
-                        </div>
+            <div class="row">
 
-                        <span class="col-6 time" id="current-time">
-                            16:16</span>
+              <span class="col weather-icon">
+                <i class="fas fa-cloud current-weather"></i>
+              </span>
 
-                            <div class="col-12 city" id="current-city"></div>
-                      </div>
-                                             
-                      <span class="col weather-icon">
-                          <i class="fas fa-cloud current-weather"></i>
-                      </span>                             
-                  </div>                       
+                <span class="col-6" id="humidity-wind">                     
+                  <div>Humidity: <span id="humidity"></span>%</div>
+                  <div>Wind: <span id="wind"></span> m/h</div>                  
+                 </span> 
+               <div class="col">
+                  <div class="col-6 date">
+                    <span id="current-date">Monday, 10 Jule</span>
+                  </div>
+
+                  <span class="col-6 time" id="current-time">
+                      16:16</span>
+
+                      <div class="col-12 city" id="current-city"></div>
+                </div>                             
+            </div>                       
           </div>
 
           <div class="row">
