--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                   <div>Humidity: <span id="humidity"></span>%</div>
                   <div>Wind: <span id="wind"></span> m/h</div>                  
                  </span> 
-               <div class="col">
+               <div class="col" id="box">
                   <div class="col-6 date">
-                    <span id="current-date">Monday, 10 Jule</span>
+                    <span id="current-date">Monday,
+                       10 Jule</span>
                   </div>
 
                   <span class="col-6 time" id="current-time">
