--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div id="footer">
           <span>Created by fwhoami</span>
           <a href="https://github.com/fwhoami/weather-app">
-            <img src="gitlogo.jpg" width="20" height="20"></img>
+            <img src="images/gitlogo.jpg" width="20" height="20"></img>
           </a>
         </div>
       </div>
