Icons with functioanality

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
             <div class="row">
 
               <span class="col weather-icon">
-                <i class="fas fa-cloud current-weather"></i>
+                <img
+                src="images/media/03d.png"
+                class="main-weather-img image-fluid"
+                id="main-icon"
+                alt="weather image"
+              />
               </span>
 
                 <span class="col-6" id="humidity-wind">                     
