five-days-forecast
It is just a basic layout

--- a/index.html
+++ b/index.html
@@ -73,41 +73,39 @@
                 </span>
               </div>
             </div>
-            <div class="five-day-forecast">
-              <div class="row forecast-icons">
-                <div class="col-2">
-                  <i class="far fa-snowflake forecast-icon"></i>
+            
+            <div class="weather-forecast" id="weather-forecast">
+              <div class="row">
+                <div class="col">
+                  <img src="images/media/01d.png" width="60" class="image-fluid" />
+                  <br />
+                  <span class ="forecast-day">Thursday</span> <br />
+                  <span class="forecast-temperature">17°C</span>
                 </div>
-                <div class="col-2">
-                  <i class="fas fa-cloud-sun-rain forecast-icon"></i>
+                <div class="col">
+                  <img src="images/media/10d.png" width="60" class="image-fluid" />
+                  <br />
+                  Friday <br />
+                  <span class="forecast-temperature">9°C</span>
                 </div>
-                <div class="col-2">
-                  <i class="fas fa-cloud-sun forecast-icon"></i>
+                <div class="col">
+                  <img src="images/media/04d.png" width="60" class="image-fluid" />
+                  <br />
+                  Saturday <br />
+                   <span class="forecast-temperature">17°C</span>
                 </div>
-                <div class="col-2">
-                  <i class="fas fa-cloud-showers-heavy forecast-icon"></i>
+                <div class="col">
+                  <img src="images/media/01d.png" width="60" class="image-fluid" />
+                  <br />
+                  Sunday <br />
+                  <span class="forecast-temperature">21°C</span>
                 </div>
-                <div class="col-2">
-                  <i class="fas fa-cloud-showers-heavy forecast-icon"></i>
+                <div class="col">
+                  <img src="images/media/01d.png" width="60" class="image-fluid"/>
+                  <br />
+                  Monday <br />
+                  <span class="forecast-temperature">22°C</span>
                 </div>
-              </div>
-
-              <div class="row forecast-temp">
-                  <div class="col-2">4° / 0°</div>
-                  <div class="col-2">12° / 4°</div>
-                  <div class="col-2">11° / 3°</div>
-                  <div class="col-2">13° / 5°</div>
-                  <div class="col-2">7° / 4°</div>
-                </div>
-      
-                <div class="row forecast-day">
-                  <div class="col-2">Sun</div>
-                  <div class="col-2">Mon</div>
-                  <div class="col-2">Tues</div>
-                  <div class="col-2">Weds</div>
-                  <div class="col-2">Thurs</div>
-              </div>
-            </div>
         </div>
         <div id="footer">
           <span>Created by fwhoami</span>
