--- a/index.html
+++ b/index.html
@@ -75,40 +75,10 @@
             </div>
             
             <div class="weather-forecast" id="weather-forecast">
-              <div class="row">
-                <div class="col">
-                  <img src="images/media/01d.png" width="60" class="image-fluid" />
-                  <br />
-                  <span class ="forecast-day">Thursday</span> <br />
-                  <span class="forecast-temperature">17°C</span>
-                </div>
-                <div class="col">
-                  <img src="images/media/10d.png" width="60" class="image-fluid" />
-                  <br />
-                  Friday <br />
-                  <span class="forecast-temperature">9°C</span>
-                </div>
-                <div class="col">
-                  <img src="images/media/04d.png" width="60" class="image-fluid" />
-                  <br />
-                  Saturday <br />
-                   <span class="forecast-temperature">17°C</span>
-                </div>
-                <div class="col">
-                  <img src="images/media/01d.png" width="60" class="image-fluid" />
-                  <br />
-                  Sunday <br />
-                  <span class="forecast-temperature">21°C</span>
-                </div>
-                <div class="col">
-                  <img src="images/media/01d.png" width="60" class="image-fluid"/>
-                  <br />
-                  Monday <br />
-                  <span class="forecast-temperature">22°C</span>
-                </div>
+              
         </div>
         <div id="footer">
-          <span>Created by fwhoami</span>
+          <span>Open-source code by fwhoami</span>
           <a href="https://github.com/fwhoami/weather-app">
             <img src="images/gitlogo.jpg" width="20" height="20"></img>
           </a>
